[package]
name = "inferno"
version = "0.0.0"
edition = "2021"
default-run = "infernod"

[[bin]]
name = "infernod"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
bytes = { version = "1" }
env_logger = "0.11.5"
futures = "0.3"
http-body-util = "0.1"
hyper = { version = "1.1", features = ["http1", "client", "server"] }
libsql = { git = "https://github.com/tursodatabase/libsql" }
log = "0.4.22"
monoio = { version = "0.2.3", default-features = false, features = [
    "async-cancel",
    "bytes",
    "iouring",
    "legacy",
    "macros",
    "poll-io",
    "sync",
    "utils",
]}
monoio-compat = { version = "0.2.2", features = [ "hyper" ] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1"
sieve-cache = "0.2.1"
thiserror = "1.0.63"
uuid = { version = "1.3", features = ["v4"] }

[target.'cfg(not(target_family = "windows"))'.dev-dependencies]
pprof = { version = "0.12.1", features = ["criterion", "flamegraph"] }

[dev-dependencies]
criterion = { version = "0.5", features = [
    "html_reports",
    "async",
    "async_futures",
] }

[[bench]]
name = "benchmark"
harness = false
