[package]
name = "hiisi"
version.workspace = true
authors.workspace = true
default-run = "hiisid"
edition.workspace = true
license.workspace = true
description = "The Limbo interactive SQL shell"

[features]
simulation = []

[[bin]]
name = "hiisid"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
bytes = { version = "1" }
clap = { version = "4.5", features = [ "derive", "env", "string" ] }
env_logger = "0.11.5"
http = "1.1.0"
http-body-util = "0.1"
httparse = "1.9.4"
libsql-ffi = { git = "https://github.com/tursodatabase/libsql" }
log = "0.4.22"
polling = "3.7.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1"
sieve-cache = "0.2.1"
socket2 = { version = "0.5.7", features = ["all"] }
thiserror = "1.0.63"
uuid = { version = "1.3", features = ["v4"] }

[target.'cfg(not(target_family = "windows"))'.dev-dependencies]
pprof = { version = "0.12.1", features = ["criterion", "flamegraph"] }

[dev-dependencies]
criterion = { version = "0.5", features = [
    "html_reports",
] }

[[bench]]
name = "benchmark"
harness = false
