[package]
name = "hiisi-sim"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Hiisi simulator"

[[bin]]
name = "hiisi-sim"
path = "src/main.rs"

[dependencies]
bytes = "1.7.1"
env_logger = "0.11.5"
hiisi = { path = "../hiisi-server", features = ["simulation"] }
httparse = "1.9.4"
log = "0.4.22"
rand = "0.8.5"
rand_chacha = "0.3.1"
socket2 = "0.5.7"
